--- a/frontend/views/home/home.html
+++ b/frontend/views/home/home.html
@@ -20,7 +20,10 @@
 	</div>	
 	
 	<div class="home-intro">
-	  <h1>Reach your <span class="sky-blue">Parliamentarian</span> in <span class="green">3</span> simple steps </h1>
+	  <h1>Make your voice heard to <span class="sky-blue">German Parliament</span> in <span class="green">3</span> simple steps </h1>
+	  <p>
+		 Hoping the government will do what is best is not effective. It's important to tell them what issues are important to you. By making a few quick phone calls, you can be part of positive change in Germany.
+     </p>
 	  <div class="balloon-background">
 	  	
 	  </div>
@@ -44,6 +47,7 @@
 	          </div>
 	     </div>
 	 </div>
+
 		
 	</div>
 </section>
