--- a/frontend/views/campaigns/campaign-details/campaign-details.scss
+++ b/frontend/views/campaigns/campaign-details/campaign-details.scss
@@ -9,6 +9,11 @@
 		background:$dark-blue;
 		text-align:center;
 
+		hr
+		{
+			border-color:rgba(229, 229, 229, 0.2);
+		}
+
 		img
 		{
 			width: 175px;
@@ -19,8 +24,9 @@
 			border-radius:100%;
 			border:6px solid $mustard;
 		}
+		
 
-		.representative-name
+		.representative-name,.call-header
 		{
 			color:$mustard;
 			font-size:1.8rem;
@@ -29,18 +35,30 @@
 
 		.representative-number
 		{
-			color:white;
+			color:$green;
 			font-size: 1.4rem;
 			margin: 10px;
 			margin-bottom: 30px;
 		}
 
-		.representative-call-btn
+	
+		
+	}
+
+	.feedback-wrap
+	{
+		text-align: center;
+		background: $sky-blue;
+		padding: 20px;
+		box-sizing: border-box;
+
+	   .representative-call-btn
 		{
 			height: 45px;		    
 		    padding: 10px;
 		    margin-right: 20px;
 		    font-size: 16px;
+			
 		    &.positive{
 		    	@include round-btn(8px,$green,white);
 		    }
@@ -48,11 +66,28 @@
 		    &.negative{
 		    	@include round-btn(8px,$pink,white);
 		    }
+			
+			&:hover
+			{
+				background-color:$dark-blue;
+			}
 		}
 
 		.feedback
 		{
 			color: white;
+		}
+		
+		.feedback-box
+		{
+			margin: 25px;
+			margin-top:40px;
+
+			button{
+				margin-top:20px;
+				
+			}
+
 		}
 	}
 
@@ -63,6 +98,7 @@
 
 		h2{
 			margin-top:20px;
+			color: $sky-blue;
 		}
 
 		.blue-span{
