--- a/frontend/views/campaigns/campaigns.html
+++ b/frontend/views/campaigns/campaigns.html
@@ -3,6 +3,7 @@
         <h1>Trending Campaigns</h1>
         <div class="selected-city-search-campaigns-wrap">
             <div class="selected-city">
+                Location:&nbsp;
                 <span class="icon icon-location"></span>
                 <span>{{currentCountry.name}} - Germany</a>    
                 <span>
@@ -17,10 +18,12 @@
                     <option value="">{{currentCountry.name}}</option>            
                 </select>
             </div>
+            
             <!--<div class="search-campaigns">
                 <input type="text" placeholder="Search campaigns" />
             </div>-->
         </div>
+        <hr />
         <div class="campaigns-list">
             <campaign ng-repeat="campaign in campaigns" campaign="campaign"></campaign>
         </div>
