--- a/frontend/views/home/home.scss
+++ b/frontend/views/home/home.scss
@@ -13,7 +13,7 @@
 		&::before{
 			@include center-all-absolute();
 			content:"";
-			background:url("../img/location-marker.png");
+			//background:url("../img/location-marker.png");
 			z-index:2;			
 			width:145px;
 			height:193px;
@@ -36,7 +36,7 @@
 		    	height: $location-input-height;
 		    	padding: 20px;
 		    	box-sizing: border-box;
-		    	border: none;
+		    	border: 1px solid $sky-blue;
 		    	outline: none;
 		    }
 
@@ -52,7 +52,7 @@
 		    	
 		    	&:disabled
 		    	{
-                   background:$light-grey;
+                   background:grey;
 		    	}
 
 		    	&:hover:not([disabled]){
@@ -83,7 +83,7 @@
 	.home-intro
 	{
 		h1{
-			margin-top:60px;
+			margin-top:120px;
 			text-align:center;
 
 			.sky-blue{
@@ -101,6 +101,14 @@
 				font-weight:bold;
 				font-size:3rem;
 			}
+		}
+
+		p
+		{
+				padding: 25px;
+				max-width: 800px;
+				margin: auto;
+				font-size: 1.3rem;
 		}
 
 		.balloon-background{
